[tool.poetry]
name = "app_utils"
version = "0.1.0"
description = "Utilities for building applications"
authors = ["Attila Dudas <dudasa7@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
pytest-cov = "^2.10.1"
ci-tools = "^0.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "ci-tools"
url = "https://gitlab+deploy-token-319254:VzxTebK6tzfSby3da_88@gitlab.com/api/v4/projects/23407680/packages/pypi/simple/"
secondary = true